# bevy_Mcbaise_Palee_Regard_Absurdia_Fantasmagoria

./: .gitignore  AGENT.md  Cargo.toml  README.md  Taskfile.yml  requirements.txt
.cargo/: config.toml
.github/workflows/: build.yml  clippy.yml  deploy.yml  test.yml
assets/shaders/: mcbaise_tube.wgsl
benches/: forward.rs
crates/bevy_Mcbaise_Pale_Regard_Absurdia_Fantasmagoria/: Cargo.toml  README.md
crates/bevy_Mcbaise_Pale_Regard_Absurdia_Fantasmagoria/assets/shaders/: mcbaise_tube.wgsl
crates/bevy_Mcbaise_Pale_Regard_Absurdia_Fantasmagoria/examples/: resize_test.rs
crates/bevy_Mcbaise_Pale_Regard_Absurdia_Fantasmagoria/src/: lib.rs  main.rs  mcbaise_tube.wgsl  native_assets.rs
crates/bevy_Mcbaise_Pale_Regard_Absurdia_Fantasmagoria/www/: gif.js.map  index.html  sw.js
crates/bevy_burn_human/: Cargo.toml
crates/bevy_burn_human/src/: lib.rs  main.rs
crates/bevy_burn_human/www/: index.html
src/: lib.rs
src/data/: embedded.rs  mod.rs  packed.rs  reference.rs
src/model/: blendshape.rs  kinematics.rs  mesh.rs  mod.rs  phenotype.rs  skinning.rs
src/util/: math.rs  mod.rs
tests/: reference_forward.rs
tests/reference/: fullbody_default.meta.json
tool/: Cargo.toml
tool/scripts/: export_reference.py
