[workspace]
members = [
    "crates/bevy_burn_human",
    "tool",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
version = "0.1.0"

[package]
name = "burn_human"
description = "Parametric human forward mesh pipeline in Rust + Burn (scaffold)."
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = ""
readme = "README.md"

[dependencies]
# Burn will be wired in once the forward pipeline is ported.
burn = { version = "0.19", default-features = false, features = ["std", "ndarray"], optional = true }
safetensors = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
bytemuck = { version = "1.18", features = ["derive"] }

[dev-dependencies]
criterion = "0.8"

[features]
default = []
ndarray = ["burn"]

[[bench]]
name = "forward"
harness = false
