[package]
name = "bevy_burn_human"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[features]
default = ["native"]
native = []
web = ["console_error_panic_hook", "wasm-bindgen"]

[dependencies]
bevy = { version = "0.17", default-features = false, features = [
    "bevy_asset",
    "bevy_camera",
    "bevy_core_pipeline",
    "bevy_gizmos",
    "bevy_gltf",
    "bevy_image",
    "bevy_log",
    "bevy_light",
    "bevy_mesh",
    "bevy_pbr",
    "bevy_render",
    "bevy_post_process",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "bevy_ui_render",
    "bevy_window",
    "bevy_winit",
    "jpeg",
    "multi_threaded",
    "png",
    "std",
    "tonemapping_luts",
    "webgpu",
    "x11",
    "zstd_rust",
] }
burn_human = { path = "../../" }
console_error_panic_hook = { version = "0.1", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
noise = "0.9"
bevy_egui = { version = "0.38", default-features = false, features = ["default_fonts", "render"] }
getrandom = { version = "0.3", features = ["wasm_js"] }
uuid = { version = "1", features = ["js"] }
bevy_panorbit_camera = "0.33"
bevy_tasks = "0.17"
futures-lite = "2"
